--- a/client/index.html
+++ b/client/index.html
@@ -74,6 +74,8 @@
       <script src="bower_components/angular-animate/angular-animate.js"></script>
       <script src="bower_components/angular-aria/angular-aria.js"></script>
       <script src="bower_components/angular-material/angular-material.js"></script>
+      <script src="bower_components/firebase/firebase.js"></script>
+      <script src="bower_components/angularfire/dist/angularfire.js"></script>
       <!-- endbower -->
     <!-- endbuild -->
 
@@ -87,6 +89,7 @@
           <script src="app/directives/cardDirective/cardDirective.directive.js"></script>
           <script src="app/factories/ApiConfig/ApiConfig.service.js"></script>
           <script src="app/factories/AuthorApi/AuthorApi.service.js"></script>
+          <script src="app/factories/Firebase/firebase.js"></script>
           <script src="app/factories/ProjectApi/ProjectApi.service.js"></script>
           <script src="app/factories/ProjectComponentsApi/ProjectComponentsApi.service.js"></script>
           <script src="app/factories/ToolApi/ToolApi.service.js"></script>
